k8s_deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xkube 
  labels:
    env: prod
    team: devops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xkube-admin 
  namespace: xkube 
  labels:
    app: xkube-admin 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xkube-admin 
  template:
    metadata:
      labels:
        app: xkube-admin 
    spec:
      containers:
      - name: xkube-admin
        image: crpi-44hgz4440mgo9lnt.cn-guangzhou.personal.cr.aliyuncs.com/eeenet/xkube:3.9
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: /app/conf
            name: config-volume
            readOnly: true
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /public/check
            port: 80
            scheme: HTTP
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /public/check
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 3
      volumes:
        - configMap:
            defaultMode: 420
            name: xkube-admin-config 
          name: config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: xkube-admin 
  namespace: xkube 
  labels:
    app: xkube-admin 
spec:
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP 
  selector:
    app: xkube-admin 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xkube-admin
  namespace: xkube 
spec:
  ingressClassName: nginx
  rules:
  - host: xkube.xxxx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xkube-admin
            port: 
              number: 80
